# tp_django

./: .coverage  .env  .env.example  GUIDE_DEPLOYMENT_RAILWAY_CLOUDINARY.txt  Procfile  README.md  export_data.sh  hola  hola.pub  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  middleware.py  models.py  tests.py  urls.py  views.py
accounts/management/commands/: clear_visits.py
accounts/migrations/: 0001_initial.py  0002_auto_20251203_1006.py  0003_pageview_visitor_id.py
blog/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py  views_api.py
blog/migrations/: 0001_initial.py  0002_article_image.py  0003_alter_article_image.py
polls/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py  views_api.py
polls/migrations/: 0001_initial.py  0002_question_author_question_is_active.py  0003_alter_question_author.py  0004_alter_question_pub_date.py
staticfiles/: favicon_data.tmp  favicon_generator.html
tp_django/: asgi.py  settings.py  test_urls.py  tests.py  urls.py  wsgi.py
tp_django/static/accounts/: style.css
tp_django/static/blog/: style.css
tp_django/static/polls/: style.css
tp_django/templates/: base.html
tp_django/templates/accounts/: dashboard.html  edit_profile.html  login.html  my_articles.html  my_polls.html  signup.html
tp_django/templates/blog/: article_detail.html  edit_article.html  home.html  post_article.html  post_comment.html
tp_django/templates/polls/: confirm_delete.html  create_poll.html  detail.html  edit_poll.html  index.html  results.html
